--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Путешествие по России</title>
+  <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -25,7 +25,7 @@
   <main class="content">
 
     <section class="lead">
-      <h1 class="lead__title">Путешествие по России</h1>
+      <h1 class="lead__title">Путешествия по России</h1>
       <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
       <img class="lead__image" src="./images/lead-polka.jpg" alt="карта пути">
       <p class="lead__caption">ваша полка — верхняя</p>
@@ -43,18 +43,18 @@
       </p>
 
       <ul class="intro__list">
-        <li>Часовых поясов 11</li>
-        <li>Объектов природного наследия ЮНЕСКО 12</li>
-        <li>Объектов культурного наследия ЮНЕСКО 16</li>
-        <li>Природных заповедников 105</li>
-        <li>Аэропортов 241</li>
+        <li><span class="intro__list-heading">Часовых поясов</span> 11</li>
+        <li><span class="intro__list-heading">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li><span class="intro__list-heading">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li><span class="intro__list-heading">Природных заповедников</span> 105</li>
+        <li><span class="intro__list-heading">Аэропортов</span> 241</li>
       </ul>
     </section>
 
     <section class="photo-grid">
       <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="вид из окна">
       <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="горы">
-      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="поле"> 
+      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="поле">
       <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="сочи">
       <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="ариса">
       <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="байкал-1">
@@ -175,12 +175,24 @@
   </main>
 
   <footer class="footer">
-    <nav class="footer__link-box">
-      <a class="footer__link" href="#">Карты</a>
-      <a class="footer__link" href="#">Погода</a>
-      <a class="footer__link" href="#">Расписание</a>
-      <a class="footer__link" href="#">Календарь</a>
-      <a class="footer__link" href="#">Путешествия</a>
+    <nav class="footer__navigation">
+      <ul class="footer__link-list">
+        <li>
+          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+        </li>
+        <li>
+          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+        </li>
+        <li>
+          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+        </li>
+        <li>
+          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+        </li>
+        <li>
+          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+        </li>
+      </ul>
     </nav>
     <p class="footer__copyright">&copy; 2022. Антипенко Иван</p>
   </footer>
