--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1 class="lead__title">Путешествия по России</h1>
       <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
       <img class="lead__image" src="./images/lead-polka.jpg" alt="карта пути">
-      <p class="lead__caption">ваша полка — верхняя</p>
+      <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
     </section>
 
     <section class="intro">
@@ -175,7 +175,7 @@
   </main>
 
   <footer class="footer">
-    <nav class="footer__navigation">
+    <nav>
       <ul class="footer__link-list">
         <li>
           <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
